<resources>
    <string name="app_name">BankApp</string>
    <string name="login_titre">BankApp</string>
    <string name="login_sous_titre">Accédez à vos comptes</string>
    <string name="hint_identifiant">Identifiant</string>
    <string name="hint_mot_de_passe">Mot de passe</string>
    <string name="cb_rappeler">Se rappeler de moi</string>
    <string name="btn_connexion">Se connecter</string>
    <string name="erreur_champs_vides">Veuillez remplir tous les champs.</string>
    <string name="erreur_mdp_court">Le mot de passe doit contenir au moins 6
caractères.</string>
    <string name="erreur_identifiants">Identifiant ou mot de passe incorrect.</string>
    <string name="accueil_bienvenue">Bonjour, %s</string>
    <string name="carte_transactions">Consulter\nles transactions</string>
    <string name="carte_recherche">Rechercher\nune transaction</string>
    <string name="carte_virement">Nouveau\nvirement</string>
    <string name="carte_comptes">Mes\ncomptes</string>
    <string name="carte_stats">Statistiques</string>
    <string name="carte_params">Paramètres</string>
    <string name="toast_a_venir">Fonctionnalité à venir</string>
</resources>